# Japanese_contract_translator

./: .gitignore  Dockerfile  Dockerfile.render  INSTALL.md  README.md  REQUIREMENTS.md  development.md  netlify.toml  pyproject.toml  render.yaml  requirements-ocr.txt  requirements-tierB.txt  requirements.txt
JCT_Backend_v1/: .env.example  requirements.txt
JCT_Backend_v1/app/: main.py
JCT_Backend_v1/app/adapters/: gemini_client.py  groq_client.py  local_llm_client.py  prompts.py
JCT_Backend_v1/app/api/: routes_export.py  routes_jobs.py  routes_preview.py  routes_upload.py
JCT_Backend_v1/app/core/: auth.py  cache.py  config.py  db.py  envelope.py  error_catalog.py  exceptions.py  logging.py  memory.py  notifications.py  proxy.py  security.py
JCT_Backend_v1/app/schemas/: document.py  job.py
JCT_Backend_v1/app/services/: document_store.py  export_service.py  (+5 more)
JCT_Backend_v1/db/: schema.sql
JCT_Backend_v1/scripts/: seed_db.py
JCT_frontend/: .env.example  index.html  package-lock.json  package.json  verify-final.mjs  vite.config.ts
JCT_frontend/src/: App.tsx  index.css
scripts/: make_sample.py
src/JCT_Backend_v2/: __init__.py  masking.py  negative_verb_guard.py  render_html.py  requirements-v2-experimental.txt  schema.py  smoke_test.py  spatial_sort.py  translate_client.py
src/jpdoc/: __init__.py  cli.py  config.py  glossary.py  ingest.py  ocr.py  pipeline.py  preprocess.py  raster.py  render.py  schema.py  tierb.py  translate.py
src/jpdoc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_smoke.py  test_translate.py
(+12 files in other folders)
